src/components/common/Header/Header.module.css
:global .ant-layout .ant-layout-header {
    line-height: 40px;
}

:global .ant-layout .ant-layout-header {
    height: 64px;
}

.headerLeft {
    padding-left: 32px;
}

.headerLeft :global .ant-space {
    gap: 0px !important;
}

.userAvatar {
    padding-top: 12px;
}

.userAvatarSkeleton {
    padding-top: 0px;
}

.headerLeft .userAvatar .userAvatarInside {
    background-color: #808080;
    font-size: 20px;
    line-height: 35px;
}

.userText {
    float: right;
    padding-top: 16px;
    color: #0b0b0c;
    line-height: 20px;
    font-size: 14px;
    font-weight: 700;
}

.userText .userName {
    max-width: 140px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

/* .dropdownArrow {
    padding: 80%;
} */

.dropdownArrow .navLink {
    color: #ff3e5b !important;
}

.bellSkeleton {
    padding-top: 1px;
}

.userTypeSkeleton {
    float: right;
    padding-top: 7px;
    color: #342c2c;
    line-height: 20px;
    font-size: 14px;
    font-weight: 700;
}

.userTextSkeleton {
    float: right;
    padding-top: 8px;
    color: #342c2c;
    line-height: 20px;
    font-size: 14px;
    font-weight: 700;
}

.dealerName {
    color: #342c2c;
    font-size: 16px;
    padding-bottom: 2px;
    font-weight: 700;
    line-height: 24px;
}

/* .userName {
    max-width: 150px;
    text-align: right;
    text-overflow: ellipsis;
} */

.dealerLocation {
    color: #ff3e5b;
    font-weight: 400;
    font-size: 12px;
    line-height: 20px;
}

.dropdownIcon {
    color: #ff3e5b;
    padding: 5px;
    cursor: pointer;
}

.dropdownIcon :hover {
    color: #ff3e5b;
}

.seprator {
    color: #342c2c;
    padding-right: 5px;
    font-weight: 400;
    font-size: 16px;
}

.dealerInfo {
    margin-top: -5px;
}

.userServiceArea {
    color: #342c2c;
    font-size: 12px;
}

.userRoleName {
    color: #ff3e5b;
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
}

.userText .userServiceArea {
    color: #858585;
    font-size: 12px;
    font-weight: 500;
    line-height: 20px;
}

.dropdownArrow .navLink :global .ant-space .ant-space-item:last-child {
    padding-top: 10px;
}

:global .ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-title-content>a:hover {
    text-decoration: none;
}

.headerRight {
    float: right;
    padding-right: 20px;
    padding-top: 18px;
}

.headerRight :global .ant-input-group {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border: 1px solid #b5b5b6;
}

.headerRight .navbarNav .floatLeft .navLink {
    color: #342c2c;
    padding-left: 10px;
    padding-right: 14px;
}

.headerRight .navbarNav .floatLeft .navLink:hover svg {
    color: #ff3e5b;
}

.headerRight :global .ant-input-group:hover {
    border: 1px solid #0b0b0c;
}

.headerRight :global .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
    border-color: transparent;
    border-inline-end-width: 0px;
}

.headerRight :global .ant-input-affix-wrapper:focus,
.headerRight :global .ant-input-affix-wrapper-focused {
    box-shadow: 0 0 0 2px rgba(255, 5, 5, 0);
}

.headerRight :global .ant-btn-default {
    box-shadow: 0 2px 0 rgba(0, 0, 0, 0);
}

.headerRight :global .ant-btn-default:not(:disabled):hover {
    border-color: transparent;
}

.navbarNav {
    display: flex;
    flex-direction: row;
    list-style: none;
}

.navbarExpand {
    flex-flow: row nowrap;
    justify-content: flex-start;
}

.navLink :global .ant-badge .ant-badge-count {
    color: #fff;
    background-color: #ff3e5b;
    right: 5px;
    top: 4px;
}

.helpLineText {
    display: inline-block;
    font-size: 12px;
    line-height: 16px;
    /* padding-left: 5px; */
    margin-left: 4px;
    text-align: left;
    font-weight: 700;
}

.helpLineText span {
    /* color: #6c757d; */
    font-size: 12px;
    font-weight: 300;
}

.mt10 {
    margin-top: 10px;
}

.mb10 {
    margin-bottom: 10px;
}

.welcomeUser {
    padding-left: 10px;
    margin-top: -20px;
}

.welcomeUser .userAvatar .userAvatarInside {
    background-color: #E6E6E6;
    color: #0B0B0C;
    font-size: 16px;
    font-weight: 500;
    line-height: 30px;
}

.welcomeUser .navLink {
    color: #342c2c;
    padding: 1px !important;
    float: right;
}

.headerContainer :global .ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item,
.headerContainer :global .ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-item,
.headerContainer :global .ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-submenu-title,
.headerContainer :global .ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title {
    color: #342C2C;
    font-size: 14px;
    font-weight: 400;
    line-height: 32px;
    padding: 0;
}

.headerContainer :global .ant-dropdown {
    width: 170px;
}

.headerContainer :global .ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-title-content .anticon,
.headerContainer :global .ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-title-content .anticon {
    padding-right: 8px;
}

.headerContainer :global .ant-dropdown .ant-dropdown-menu,
.headerContainer :global .ant-dropdown-menu-submenu .ant-dropdown-menu {
    padding: 10px 16px;
}
/* ... */

